# pandoc-tar

./: .gitignore  Extensions.hs  LICENSE  MANUAL.txt  Main.hs  README.md  pandoc-tar.cabal  stack.yaml
docker/: debian.dockerfile
examples/: example.rb
